<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ivart.makedecision.MainActivity">

   <Button
       android:text="@string/make_decision"
       android:textAlignment="center"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_weight="1"
       android:id="@+id/btn_make_decision"
       android:background="@color/colorGreenLight"/>
    <Button
        android:text="@string/get_my_decisions"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/btn_get_my_decisions"
        android:background="@color/colorFiolet"/>
    <Button
        android:text="@string/about_us"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/btn_about_us"
        android:background="@color/colorSky"/>
</LinearLayout>
