<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_make_decision"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_green_background"
    tools:context="com.ivart.makedecision.Activities.MakeDecisionActivity">
    <TextView
        android:text="@string/txtv_enter_question"
        android:textColor="@color/text_dark"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:textAlignment="center"
        android:textSize="30dp"
        android:gravity="center_vertical|center_horizontal"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/hint_enter_the_question"
        android:id="@+id/edt_decision_question"
        android:inputType="textCapSentences"
        android:layout_weight="40"
        android:gravity="center_horizontal|center_vertical" />

    <Button
        android:textAlignment="center"
        android:text="@string/add_decision"
        android:textSize="12dp"
        android:textColor="@color/text_dark"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:id="@+id/btn_add_decision" />
</LinearLayout>
