<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="241dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_will_if_it_happens"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bkg"
                android:text="@string/what_will_if_it_happens"
                android:textColor="@color/primary_light"
                android:textSize="@dimen/category_item_text_size"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_will_if_it_doesnt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bkg"
                android:text="@string/what_will_if_it_doesnt_happen"
                android:textColor="@color/primary_light"
                android:textSize="@dimen/category_item_text_size"
                android:textAllCaps="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="228dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_wont_if_it_happens"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bkg"
                android:text="@string/what_wont_be_if_it_happens"
                android:textColor="@color/primary_light"
                android:textSize="@dimen/category_item_text_size"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_wont_if_it_doesnt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bkg"
                android:text="@string/what_wont_be_if_id_doesnt_happens"
                android:textColor="@color/primary_light"
                android:textSize="@dimen/category_item_text_size"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_height="120dp"
        android:src="@drawable/diagramma"
        android:id="@+id/calculate"
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:clickable="true"
        android:onClick="onClick3"
        />
</FrameLayout>
